# Projeto-Django

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml
contacts/: forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: create.html  name.html
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/templates/admin/: base.html
polls/: admin.py  models.py  views.py
polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
polls/templates/polls/: detail.html  index.html
